# gpsdata

./: Makefile.am  README  configure.ac  gpsdata.pc.in  gpsdata.spec.in  libgpsdata-utils.pc.in
.github/actions/InstallAutoconfArchive/: action.yml
.github/actions/InstallBitsery/: action.yml
.github/actions/InstallDateTz/: action.yml
.github/actions/InstallZonedetect/: action.yml
.github/workflows/: codeql.yml  install-autoconf-archive.yml  install-bitsery.yml  install-data-tz.yml  install-local-dependencies.yml  install-zonedetect.yml
examples/: PrintGpsRoute.hpp  example1.cpp  example2.cpp  example3.cpp
include/: gpsdata-utils.hpp  gpsdata.hpp
include/gpsdata/: GpsDataValueType.hpp  GpsFactoryUserBase.hpp  GpsPoint.hpp  GpsPointIterator.hpp  GpsRoute.hpp  GpsSegment.hpp  GpsStatistics.hpp  GpsValue.hpp  comparision.hpp
include/gpsdata/bitsery/: GpsPoint.hpp  GpsRoute.hpp  GpsSegment.hpp  GpsStatistics.hpp  GpsValue.hpp  ObjectId.hpp  ObjectTime.hpp  bitsery.hpp
include/gpsdata/comp/: GpsPoint.hpp  GpsRoute.hpp  GpsSegment.hpp  GpsStatistics.hpp  GpsValue.hpp
include/gpsdata/traits/: GpsFactory.hpp  GpsPoint.hpp  GpsRoute.hpp  GpsSegment.hpp  GpsStatistics.hpp  common.hpp  is_instance.hpp
include/gpsdata/types/: GpsDataValueType.hpp  Latitude.hpp  Longitude.hpp  ObjectId.hpp  ObjectTime.hpp
include/gpsdata/utils/: Convert.hpp  GpsDataFactoryBasic.hpp  Logger.hpp  PointDate.hpp  ZoneDate.hpp
src/utils/: Logger.cpp  PointDate.cpp  ZoneDate.cpp
tests/: Makefile.am  test-Convert.cpp  test-ObjectId.cpp  test-ObjectTime.cpp  test-pointdate.cpp  test-zonedate.cpp
